Fixed button border-radius on iOS

--- a/src/_button.scss
+++ b/src/_button.scss
@@ -7,6 +7,7 @@ input[type='reset'],
 input[type='submit'] {
   padding: 1.2rem 2rem;
   border: 0.1rem solid var(--color-primary);
+  border-radius: 0;
   display: inline-block;
   margin: 0.5rem 0;
   font-size: 1.4rem;
